--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
         "build-nolog": "vite build --config vite/config.prod.mjs"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.1.7",
         "phaser": "^3.90.0",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "tailwindcss": "^4.1.7"
     },
     "devDependencies": {
         "@eslint/js": "^9.22.0",
@@ -40,7 +42,7 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
-        "vite": "^6.3.1",
-        "terser": "5.39.0"
+        "terser": "5.39.0",
+        "vite": "^6.3.1"
     }
 }
