--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "phaser": "^3.90.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-joystick-component": "^6.2.1",
         "tailwindcss": "^4.1.7"
     },
     "devDependencies": {
